--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>dairy-management</name>
     <description>Milk Dairy Management System</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>21</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -68,8 +68,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <release>21</release>
                 </configuration>
             </plugin>
         </plugins>
